--- a/tex/seq64_manpage.tex
+++ b/tex/seq64_manpage.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-03
+% \update      2015-11-04
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -21,6 +21,15 @@
    not exactly in \textsl{man} format.  Also, an item or two are shown that
    somehow didn't make it into the man page, and minor corrections and
    formatting tweaks were made.
+   Note that the legacy Seq24 options, which use underscores or
+   are missing the option hyphen, are still unofficially supported.
+
+   \texttt{\$HOME/.config/sequencer64/sequencer64.rc} holds the "rc" settings
+   for \textsl{Sequencer64}.
+   \texttt{\$HOME/.config/sequencer64/sequencer64.usr} holds the "user" settings
+   for \textsl{Sequencer64}.
+   But the old style names are used for the "legacy" mode.  See the --legacy
+   option below.
 
    \textsl{Sequencer64} is a real-time MIDI sequencer. It was created to
    provide a very simple interface for editing and playing MIDI 'loops'.
@@ -87,9 +96,13 @@
       This option does not exist.
       Instead, specify the file itself as the last command-line argument.
 
-   \optionpar{-m}{--manual\_alsa\_ports}
+   \optionpar{-m}{--manual-alsa-ports}
       \textsl{Sequencer64} won't attach ALSA ports.
       Instead, it will create is own set of input and output busses/ports.
+
+   \optionpar{-a}{--auto-alsa-ports}
+      \textsl{Sequencer64} will attach ALSA ports.
+      This variant is useful for overriding the rc configuration file.
 
    \optionpar{-s}{--showmidi}
       Dumps incoming MIDI to the screen.
@@ -97,16 +110,16 @@
    \optionpar{-p}{--priority}
       Runs at higher priority with a FIFO scheduler.
 
-   \optionpar{N/A}{--pass\_sysex}
+   \optionpar{N/A}{--pass-sysex}
       Passes any incoming SYSEX messages to all outputs.
 
    \optionpar{-i}{--ignore [number]}
       Ignore ALSA device [number].
 
-   \optionpar{-k}{--show\_keys}
+   \optionpar{-k}{--show-keys}
       Prints pressed key value.
 
-   \optionpar{-x}{--interaction\_method [number]}
+   \optionpar{-x}{--interaction-method [number]}
       Select the mouse interaction method.
       0 = seq24 (the default); and 1 = fruity loops method.
       The latter does not completely support all actions supported by the Seq24
@@ -115,26 +128,24 @@
       The following options will not be shown by --help if the application is
       not compiled for JACK support.
 
-   \optionpar{-j}{--jack\_transport}
+   \optionpar{-j}{--jack-transport}
       \textsl{Sequencer64} will sync to JACK transport.
 
-   \optionpar{-J}{--jack\_master}
+   \optionpar{-J}{--jack-master}
       \textsl{Sequencer64} will try to be JACK master.
 
-   \optionpar{-C}{--jack\_master\_cond}
+   \optionpar{-C}{--jack-master-cond}
       JACK master will fail if there is already a master.
 
-   \optionpar{-M}{--jack\_start\_mode [x]}
+   \optionpar{-M}{--jack-start-mode [x]}
       When \textsl{Sequencer64} is synced to JACK, the following play modes
       are available: 0 = live mode; and 1 = song mode, the default.
 
    \optionpar{-S}{--stats}
       Print statistics on the command-line while running.
 
-   \optionpar{-U}{--jack\_session\_uuid [uuid]}
+   \optionpar{-U}{--jack-session-uuid [uuid]}
       Set the UUID for the JACK session.
-
-   \texttt{\$HOME/.seq24rc} holds the user settings for \textsl{Sequencer64}.
 
    The current Sequencer64 project homepage is a simple git repository at the
    https://github.com/ahlstromcj/sequencer64.git URL.
@@ -158,7 +169,7 @@
    \url{mailto:ahlstromcj@gmail.com}.
 
    \begin{verbatim}
-Version 0.9.9.6                 November 3 2015                  sequencer64(1)
+Version 0.9.9.6                 November 4 2015                  sequencer64(1)
    \end{verbatim}
 
 %-------------------------------------------------------------------------------
