Added build instructions, feature diagrams.

--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2015-11-02
+% \update      2015-11-06
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -339,7 +339,7 @@
 
 % Building and debugging Sequencer64
 
-% \input{yum_build}
+\input{seq64_build}
 
 % Discussion of MIDI formats related to Seq24 and Sequencer64
 
