--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -427,6 +427,26 @@
    This item, if enabled, shows the key labels in the lower-right corner of
    each loop/pattern in the Patterns window.  This feature is useful
    for live playback and control of a song.
+   Note that this option is also available in the "rc" configuration file.
+
+   \textbf{New:}
+   \index{new!grid numbers}
+   If \textsl{Sequencer64} was build with the
+   \texttt{SEQ64\_SEQNUMBER\_ON\_GRID} macro defined,
+   as in \sectionref{subsubsec:seq64_build_macros},
+   and the \textbf{Show key labels on sequence} option is turned on, the
+   empty slots show the prospective sequence number.
+   See the following figure for the look.
+
+\begin{figure}[H]
+   \centering 
+   \includegraphics[scale=0.75]{pattern-window-with-numbering.png}
+   \caption{Pattern Window with Numbering}
+   \label{fig:seq64_build_with_numbering}
+\end{figure}
+
+   If you don't like it, either turn off the option, or rebuild the code
+   with the \texttt{SEQ64\_SEQNUMBER\_ON\_GRID} macro undefined.
 
    \itempar{Control keys}{keyboard!control keys}
    This block of fields provides shortcut keys for many operations of
