--- a/tex/seq64_manpage.tex
+++ b/tex/seq64_manpage.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-05
+% \update      2015-11-07
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -28,8 +28,8 @@
    for \textsl{Sequencer64}.
    \texttt{\$HOME/.config/sequencer64/sequencer64.usr} holds the "user" settings
    for \textsl{Sequencer64}.
-   But the old style names are used for the "legacy" mode.  See the --legacy
-   option below.
+   But the old style names are used for the "legacy" mode.  See the
+   \texttt{--legacy} option below.
 
    \textsl{Sequencer64} is a real-time MIDI sequencer. It was created to
    provide a very simple interface for editing and playing MIDI 'loops'.
