--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-02
+% \update      2015-11-07
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -280,6 +280,16 @@
       \item \textbf{Queued}.
          That same pattern also shows that it is queued, which means that it
          will start playing when the pattern next begins again.
+      \item \textbf{Alternate font}.
+         Later builds of \textsl{Sequencer64} are now built with a new font.
+         See \figureref{fig:pattern_window_main_panel_items}.  It shows the new
+         font.
+      \item \textbf{Sequence number}.
+         Later builds of \textsl{Sequencer64} are now built with the option to
+         also show the sequence number in the pattern box, if the "show UI
+         keys" option is on.
+         See \figureref{fig:pattern_window_main_panel_items}.  It shows an
+         example of the sequence number, using the new font.
    \end{itemize}
 
    \index{pattern!left click}
